k8s/simple/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: simple-app
  namespace: default
spec:
  selector:
    app: simple-app
  ports:
  - port: 80
    targetPort: 8000
  type: ClusterIP
