k8s/simple/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: simple-app
  namespace: default
  annotations:
    kubernetes.io/ingress.class: "traefik"
spec:
  rules:
  - host: simple-app.local  # замените на ваш домен, если нужно
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: simple-app
            port:
              number: 80
